# bazel_build_repro

./: MODULE.bazel  WORKSPACE.bazel  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
package/api/checkout/: BUILD.bazel  package.json  test.js
