# MODULE
module(
  compatibility_level = 1,
  name = 'nofraud_systems',
  version = '0.0.0',
)

# DEPENDENCY - External
bazel_dep(name = 'aspect_rules_js', version = '1.13.0')
bazel_dep(name = 'aspect_rules_ts', version = '1.0.4')

# EXTENSION - @npm
npm = use_extension('@aspect_rules_js//npm:extensions.bzl', 'npm', dev_dependency = True)

npm.npm_translate_lock(
    name = 'npm_deps',
    pnpm_lock = '//:pnpm-lock.yaml',
)

use_repo(npm, 'npm')